Add search engine description results

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>AnalogSea Sign-Up v1</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<meta name="description" content="Need an account? Sign-up for a new user account on AnalogSea here.">
 </head>
 <body>
 </body>
