Add img class logo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	<meta name="description" content="Need an account? Sign-up for a new user account on AnalogSea here.">
 </head>
 <body>
-<img src="analogsealogo.png">
+<img src="analogsealogo.png" class="logo">
 </body>
 </html>
