--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	<meta name="description" content="Need an account? Sign-up for a new user account on AnalogSea here.">
 </head>
 <body>
-<img src="analogsealogo.png" class="logo">
+ <img class="logo" src="analogsealogo.png" alt="AnalogSea logo" />
 </body>
 </html>
