--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
  <img class="logo" src="analogsealogo.png" alt="AnalogSea logo" />
  <div class="box">
+ 	<h1>Sign up</h1>
  </div>
 </body>
 </html>
