--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 <body>
  <img class="logo" src="analogsealogo.png" alt="AnalogSea logo" />
  <div class="box">
- 	<h1>Sign up</h1>
+	<h1>Sign up</h1>
+    <form class='signup-form' action="/some-server-endpoint" method='post'>
+    <fieldset name="login-info">
+    <label for="email">Email</label>
+    <input type="email" name='email' id='email' />
+    <label for="password">Password</label>
+    <input type="password" name="password" id='password' />
+ 	</form>
  </div>
 </body>
 </html>
