Add forgot password link

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     <button type='submit'>Sign up</button>
  </form>
+ <a href="http://www.google.com" alt="Forgot password?">Forgot password?</a>
  </div>
 </body>
 </html>
