Add placeholder text for input forms

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <fieldset name="login-info">
 
     <label for="email">Email</label>
-    <input type="email" name='email' id='email' />
+    <input placeholder="foo@bar.com" type="email" name='email' id='email' />
 
     <label for="password">Password</label>
-    <input type="password" name="password" id='password' />
+    <input placeholder="1234passw0rd" type="password" name="password" id='password' />
 
     <button type='submit'>Sign up</button>
  </form>
