--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
     <label for="password">Password</label>
     <input placeholder="1234passw0rd" type="password" name="password" id='password' />
-
     <button type='submit'>Sign up</button>
  <a href="http://www.google.com" alt="Forgot password?">Forgot password?</a>
+ </fieldset>
  </form>
  </div>
 </body>
