Add already have an account log in link

--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
  </fieldset>
  </form>
  </div>
+ <p>
+ Already have an account? <a href="http://www.google.com">Log in</a>
+ </p>
 </body>
 </html>
