Add div class login

--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
  </fieldset>
  </form>
  </div>
+ <div class="login">
  <p>
  Already have an account? <a href="http://www.google.com">Log in</a>
  </p>
+ </div>
 </body>
 </html>
