--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <fieldset name="login-info">
 
     <label for="email">Email</label>
-    <input placeholder="foo@bar.com" type="email" name='email' id='email' />
+    <input placeholder="foo@bar.com" type="email" name='email' id='email' required/>
 
     <label for="password">Password</label>
-    <input placeholder="1234passw0rd" type="password" name="password" id='password' />
+    <input placeholder="1234passw0rd" type="password" name="password" id='password'  required/>
 
     <button type='submit'>Sign up</button>
  <p>
@@ -27,9 +27,9 @@
  </form>
  </div>
  <div class="login">
- <p>
- Already have an account? <a href="http://www.google.com">Log in</a>
- </p>
+ 	<p>
+	 Already have an account? <a href="http://www.google.com">Log in</a>
+ 	</p>
  </div>
 </body>
 </html>
