Change form post location to signup url

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  <div class="box">
 
 	<h1>Sign up</h1>
-  <form class='signup-form' action="/some-server-endpoint" method='post'>
+  <form class='signup-form' action="/signup/" method='post'>
     <fieldset name="login-info">
 
     <label for="email">Email</label>
