Change forgot password and login link destination urls

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 
     <button type='submit'>Sign up</button>
  <p>
-   <a href="http://www.google.com" alt="Forgot password?">Forgot password?</a>
+   <a href="/forgot-password/new" alt="Forgot password?">Forgot password?</a>
 </p>
  </fieldset>
  </form>
  </div>
  <div class="login">
  	<p>
-	 Already have an account? <a href="http://www.google.com">Log in</a>
+	 Already have an account? <a href="/login">Log in</a>
  	</p>
  </div>
 </body>
